classDiagram
class Bus {
    +BusId: string
    +Model: BusModel
    +Rute: RuteNavn
    +BatteriKapacitetKWh: double
    +BatteriNiveauProcent: double
    +ForbrugKWhPrKm: double
    +Status: BusStatus
    +SidstOpdateret: DateTime
    +BeregnResterendeDriftTid(hastighedKmh: double): TimeSpan
}

class BusModel  { <<enumeration>> }
class RuteNavn  { <<enumeration>> }
class BusStatus { <<enumeration>> }

Bus --> BusModel
Bus --> RuteNavn
Bus --> BusStatus
